<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>pl.gdela</groupId>
		<artifactId>socomo-parent</artifactId>
		<version>2.4-SNAPSHOT</version>
	</parent>
	<artifactId>bytecode-tests</artifactId>
	<packaging>jar</packaging>

	<name>Bytecode Analyzer Tests</name>
	<description>
		Tests for the bytecode analyzer part of the Socomo.
	</description>

	<dependencies>
		<dependency>
			<groupId>pl.gdela</groupId>
			<artifactId>socomo-core</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<executions>
					<execution>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>src/main/java8</source>
								<source>src/main/java11</source>
								<source>src/main/java17</source>
								<source>src/main/java21</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<!-- the highest java version for which we have tests -->
					<release>21</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<executions>
					<execution>
						<id>compile fixture for older javas</id>
						<goals>
							<goal>run</goal>
						</goals>
						<phase>compile</phase>
						<configuration>
							<target>
								<!-- only LTS versions and latest Java version are tested here -->
								<mkdir dir="target/classes_java8"/>
								<javac destdir="target/classes_java8" release="8" debug="true" includeantruntime="false">
									<src path="src/main/java8"/>
								</javac>
								<mkdir dir="target/classes_java11"/>
								<javac destdir="target/classes_java11" release="11" debug="true" includeantruntime="false">
									<src path="src/main/java8"/>
									<src path="src/main/java11"/>
								</javac>
								<mkdir dir="target/classes_java17"/>
								<javac destdir="target/classes_java17" release="17" debug="true" includeantruntime="false">
									<src path="src/main/java8"/>
									<src path="src/main/java11"/>
									<src path="src/main/java17"/>
								</javac>
								<mkdir dir="target/classes_java21"/>
								<javac destdir="target/classes_java21" release="21" debug="true" includeantruntime="false">
									<src path="src/main/java8"/>
									<src path="src/main/java11"/>
									<src path="src/main/java17"/>
									<src path="src/main/java21"/>
								</javac>
							</target>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>--enable-preview</argLine>
					<includes>
						<include>**/*Test.java</include>
						<include>**/*TestSuite.java</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
